...
        android:layout_marginTop="32dp"
        android:text="Course Table"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/tuitionButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tuitionButton"
        app:layout_constraintTop_toBottomOf="@+id/homeTitle" />

    <Button
        android:id="@+id/tuitionButton"
        style="@style/ButtonStyle"
        android:layout_marginTop="24dp"
        android:onClick="onClick"
...
        style="@style/ButtonStyle"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="24dp"
        android:onClick="onClick"
        android:text="User Info"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/logOutButton"
        app:layout_constraintStart_toStartOf="@+id/logOutButton"
        app:layout_constraintTop_toBottomOf="@+id/myClassButton" />

    <Button
        android:id="@+id/logOutButton"
        style="@style/ButtonStyle"
...
